# zksn

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  RELEASE.md  SECURITY.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ceremony_mainnet.yml  ci.yml
ceremony/: ATTESTATION.md  input.json  proof.json  public.json  verification_key.json
circuits/: MembershipVote.circom
client/: Cargo.toml  README.md
client/cli/: main.rs
client/src/: client_lib.rs  config.rs  lib.rs  receive.rs  route.rs  send.rs
crypto/: Cargo.toml
crypto/src/: identity.rs  lib.rs  noise.rs  sphinx.rs  zkp.rs
docs/: ARCHITECTURE.md  AUDIT_FINDINGS_TEMPLATE.md  AUDIT_SCOPE.md  LEGAL.md  ROADMAP.md  SECURITY_BRIEF.md  THREAT_MODEL.md
economic/: Cargo.toml  README.md
economic/src/: cashu.rs  lib.rs  mint.rs  monero.rs  token.rs
governance/: README.md  foundry.toml
governance/contracts/: Groth16Verifier.sol  IVerifier.sol  MockVerifier.sol  PoseidonHasher.sol  ZKSNGovernance.sol
governance/scripts/: Deploy.s.sol
governance/test/: ZKSNGovernance.t.sol
infra/docker/: Dockerfile.client  Dockerfile.mixnode  docker-compose.yml
infra/docker/config/: cashu.env  i2pd.conf  tunnels.conf  yggdrasil-peer.conf  yggdrasil-seed.conf
infra/nixos/: README.md  hardware-test.sh  node  node.nix
node/: Cargo.toml  README.md  node.toml.example
node/src/: config.rs  cover.rs  i2p.rs  lib.rs  main.rs  metrics.rs  mixer.rs  network.rs  node.rs  payment.rs  peers.rs  router.rs
scripts/: bootstrap-seed.sh  ceremony.sh  demo.sh  download_ptau.sh  encode_proof.js  gen-identity.sh  patch_ceremony.js  tree.js  tree_ci.js
