[workspace]
resolver = "2"
members = [
    "node",
    "client",
    "crypto",
    "economic",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/YOUR_ORG/zksn"
description = "Zero-Knowledge Sovereign Network — metadata-resistant P2P network"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
snow = "0.9"                    # Noise protocol implementation
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Networking
bytes = "1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"   # Reduces binary size; no unwinding = no unwinding-based attacks

[profile.dev]
opt-level = 0
debug = true
