[workspace]
resolver = "2"
members = [
    "node",
    "client",
    "crypto",
    "economic",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT"
repository   = "https://github.com/Naveenob/zksn"
description  = "Zero-Knowledge Sovereign Network — metadata-resistant P2P network"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
ed25519-dalek      = { version = "2",    features = ["rand_core"] }
x25519-dalek       = { version = "2",    features = ["static_secrets"] }
curve25519-dalek   = { version = "4" }
snow               = "0.9"
sha2               = "0.10"
chacha20poly1305   = "0.10"
rand               = "0.8"
rand_core          = "0.6"
zeroize            = { version = "1",    features = ["derive"] }
hex                = "0.4"
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
bincode            = "1"
toml               = "0.8"
bytes              = "1"
futures            = "0.3"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
thiserror          = "1"
anyhow             = "1"
prometheus         = { version = "0.13", default-features = false }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

[profile.dev]
opt-level = 0
debug     = true
