[package]
name = "zksn-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZKSN Client — Send and receive messages over the Zero-Knowledge Sovereign Network"

[[bin]]
name = "zksn"
path = "cli/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
zksn-crypto   = { path = "../crypto" }
zksn-economic = { path = "../economic" }

tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
bincode       = { workspace = true }
bytes         = { workspace = true }
futures       = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
rand          = { workspace = true }
zeroize       = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal UI
indicatif = "0.17"
colored   = "2"

[dev-dependencies]
tokio-test = "0.4"
