[package]
name        = "zksn-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZKSN client library and CLI"

[[bin]]
name = "zksn"
path = "cli/main.rs"

[dependencies]
zksn-crypto   = { path = "../crypto" }
zksn-economic = { path = "../economic" }

tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
bincode            = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
rand               = { workspace = true }
zeroize            = { workspace = true }
hex                = { workspace = true }
clap               = { version = "4",   features = ["derive"] }
colored            = "2"
indicatif          = "0.17"

[dev-dependencies]
tokio-test = "0.4"
