[package]
name        = "zksn-crypto"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
description = "ZKSN cryptographic primitives — identity, Sphinx, Noise, ZKP"

[dependencies]
ed25519-dalek    = { workspace = true }
x25519-dalek     = { workspace = true }
snow             = { workspace = true }
sha2             = { workspace = true }
chacha20poly1305 = { workspace = true }
rand             = { workspace = true }
rand_core        = { workspace = true }
zeroize          = { workspace = true }
hex              = { workspace = true }
serde            = { workspace = true }
bincode          = { workspace = true }
thiserror        = { workspace = true }
anyhow           = { workspace = true }
bytes            = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
