[package]
name = "zksn-economic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZKSN Economic Layer — Cashu ecash micropayments and Monero settlement"

[dependencies]
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
rand          = { workspace = true }
zeroize       = { workspace = true }

# HTTP client for Cashu mint API
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

[features]
default = ["http"]
http = ["reqwest"]
