[package]
name        = "zksn-economic"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZKSN economic layer — Cashu ecash and Monero settlement"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
rand         = { workspace = true }
hex          = { workspace = true }
tracing      = { workspace = true }
zeroize      = { workspace = true }
sha2         = { workspace = true }
reqwest      = { version = "0.12", features = ["json"] }
k256         = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio      = { workspace = true }
tokio-test = "0.4"
